--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
+bcrypt==4.2.1
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.0
 dnspython==2.7.0
 email_validator==2.2.0
+env==0.1.0
 idna==3.10
+jwt==1.3.1
+logging==0.4.9.6
+mypy==1.14.1
+mypy-extensions==1.0.0
 password-validator==1.0
+pycparser==2.22
+PyJWT==2.10.1
 pymongo==4.10.1
+python-dotenv==1.0.1
+schedule==1.2.2
+tabulate==0.9.0
+typing_extensions==4.12.2
