seperated admin and user secret key

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,7 @@
 # email send
-sender_email = <your email>
-sender_password = <your password>
+sender_email = <email>
+sender_password = <password>
 
 # jwt secret key
-jwt_secret = <your secret key>
+jwt_admin_secret = <admin secret key>
+jwt_user_secret = <user secret key>
