added fernet secret key

--- a/src/.env.example
+++ b/src/.env.example
@@ -5,3 +5,6 @@ sender_password = <password>
 # jwt secret key
 jwt_admin_secret = <admin secret key>
 jwt_user_secret = <user secret key>
+
+# encrypt text in filename as access_key
+SECRET_KEY_FERNET = <secret key>
