added secret key of access token

--- a/src/.env.example
+++ b/src/.env.example
@@ -6,5 +6,8 @@ sender_password = <password>
 jwt_admin_secret = <admin secret key>
 jwt_user_secret = <user secret key>
 
-# encrypt text in filename as access_key
-SECRET_KEY_FERNET = <secret key>
+# admin secret access token
+SECRET_ACCESS_TOKEN_ADMIN = <admin secret key>
+
+# user secret access_token
+SECRET_ACCESS_TOKEN_USER = <user secret key>
