--- a/src/.env.example
+++ b/src/.env.example
@@ -7,7 +7,7 @@ jwt_admin_secret = <admin secret key>
 jwt_user_secret = <user secret key>
 
 # admin secret access token
-SECRET_ACCESS_TOKEN_ADMIN = <admin secret key>
+SECRET_ACCESS_TOKEN_ADMIN = <admin access_token secret key>
 
 # user secret access_token
-SECRET_ACCESS_TOKEN_USER = <user secret key>
+SECRET_ACCESS_TOKEN_USER = <user access_token secret key>
