--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
+# File
+**/tempCodeRunnerFile.py
+*/.env
+
+# Directory
+docs/
 data/
 tests/
 logs/
-*/__pycache__
-*/.*
-*/tempCodeRunnerFile.py
-docs/LibraryManagementSystem.pdf
-mypy_cache/
-tempCodeRunnerFile.py
-*/*/__pycache__
-__pycache__
-*/.env
-.*
+**/__pycache__
+**/.*
