--- a/src/.env.example
+++ b/src/.env.example
@@ -1,13 +1,13 @@
 # email send
-sender_email = <email>
-sender_password = <password>
+SENDER_EMAIL = <email>
+SENDER_PASSWORD = <password>
 
 # jwt secret key
-jwt_admin_secret = <admin secret key>
-jwt_user_secret = <user secret key>
+ADMIN_SECRET_JWT = <admin secret key>
+USER_SECRET_JWT = <user secret key>
 
 # admin secret access token
-SECRET_ACCESS_TOKEN_ADMIN = <admin access_token secret key>
+ADMIN_SECRET_ACCESS_TOKEN = <admin access_token secret key>
 
 # user secret access_token
-SECRET_ACCESS_TOKEN_USER = <user access_token secret key>
+USER_SECRET_ACCESS_TOKEN = <user access_token secret key>
