--- a/src/.env.example
+++ b/src/.env.example
@@ -1,13 +1,18 @@
-# email send
+# Email
 SENDER_EMAIL = <email>
 SENDER_PASSWORD = <password>
 
-# jwt secret key
+# JWT Secret Key
 ADMIN_SECRET_JWT = <admin secret key>
 USER_SECRET_JWT = <user secret key>
 
-# admin secret access token
+# JWT Access Token
 ADMIN_SECRET_ACCESS_TOKEN = <admin access_token secret key>
-
-# user secret access_token
 USER_SECRET_ACCESS_TOKEN = <user access_token secret key>
+
+# Mongo Config
+HOST = <db host>
+PORT = <db port>
+DB = <db name>
+USER = <db user>
+PASSWORD = <db password>
