--- a/src/.env.example
+++ b/src/.env.example
@@ -5,6 +5,7 @@ SENDER_PASSWORD = <password>
 # JWT Secret Key
 ADMIN_SECRET_JWT = <admin secret key>
 USER_SECRET_JWT = <user secret key>
+JWT_ALGORITHM = <ALGORITHM>
 
 # JWT Access Token
 ADMIN_SECRET_ACCESS_TOKEN = <admin access_token secret key>
